--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ django-heroku==0.3.1
 django-multiselectfield==0.1.12
 gunicorn==20.1.0
 psycopg2==2.9.3
+psycopg2-binary==2.9.3
 python-decouple==3.6
 pytz==2021.3
 sqlparse==0.4.2
